--- a/styles/banner.css
+++ b/styles/banner.css
@@ -53,7 +53,11 @@
         width: 35%;
     }
 
-}
     .banner__pesquisa::placeholder {
         background-position: 12em;
     }
+
+    .banner {
+        padding: 6em 0;
+    }
+}
