--- a/styles/header.css
+++ b/styles/header.css
@@ -7,11 +7,11 @@
     display: inline-block;
 }
 
-.container_botao:checked ~ .containerrotulo >  .cabeçalho_menu-hamburguer {
+.container__botao:checked~.container__rotulo>.cabeçalho__menu-hamburguer {
     background-image: url("../img/Menu Aberto.svg");
 }
 
-.container_botao:checked~.container_rotulo {
+.container__botao:checked~.container__rotulo {
     background: var(--azul-degrade);
 }
 
@@ -75,7 +75,7 @@
 }
 
 .container__texto {
-    display:none;
+    display: none;
 }
 
 @media screen and (min-width: 1024px) {
@@ -95,51 +95,55 @@
         font-weight: 700;
     }
 
-.opções {
-    display: flex;
-}
+    .opções {
+        display: flex;
+    }
 
-.opções__item {
-    padding: 0 1em;
-    text-transform: uppercase;
+    .opções__item {
+        padding: 0 1em;
+        text-transform: uppercase;
+    }
 
-}
+    .opções__link {
+        text-decoration: none;
+        color: var(--preto);
+    }
 
-.opções__link {
-    text-decoration: none;
-    color: var(--preto);
-}
+    .container__imagem-transparente {
+        display: none;
+    }
 
-.container__menu-hamburguer {
-    display: none;
-}
+    .cabeçalho__menu-hamburguer {
+        display: none;
+    }
 
-.opções__botão:checked~ .lista-menu {
-    display: block;
-    width: auto;
-}   
+    .opções__botão:checked~.lista-menu {
+        display: block;
+        width: auto;
+    }
 
-.opções__botão{
-    display: none;
-}
-.opções__botão:checked~.opções__rotulo>.opções__item {
-    background: var(--azul-degrade);
-    color: var(--branco);
-}
+    .opções__botão {
+        display: none;
+    }
 
+    .opções__botão:checked~.opções__rotulo>.opções__item {
+        background: var(--azul-degrade);
+        color: var(--branco);
+    }
 
-.opções__item {
-    padding: 2em 1em;
-}
+    .opções__item {
+        padding: 2em 1em;
+    }
 
-.lista-menu__item:hover {
-    background: var(--azul-degrade);
-}
+    .lista-menu__item:hover {
+        background: var(--azul-degrade);
+    }
 
+    .lista-menu__item:hover>.lista-menu__link {
+        -webkit-text-fill-color: var(--branco);
+        text-decoration: none;
+    }
 
-.lista-menu__item:hover>.lista-menu__link {
-    -webkit-text-fill-color: var(--branco);
-    text-decoration: none;
 }
 
 @media screen and (min-width: 1728px) {
@@ -161,5 +165,4 @@
     .container__texto {
         display: block;
     }
-}
 }
